Experimenting with a horizontal blur.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -499,46 +499,39 @@
 				vec4 fb_color = texture2D(u_anura_tex_map, texcoord);
 				float fb_grayscale = (fb_color[0] + fb_color[1] + fb_color[2])/3.0;
 
-				/*
-					This section does something fairly unintuitive - basically it's trying to limit which pixels we actually bother to apply the blend mode to - it's specifically trying to make it so none of them get applied in the middle.
-					
-					If we just naively apply our blend-mode everywhere, unless we have a really specific type of blend mode, when it's applied with water layered over the 'jet black' fill color, it won't entirely fade to black.  In the most extreme case, if we just laid a water area over a block of completely solid tiles (i.e. just a giant rectangle of pure black on the screen), we'd end up with a slightly off-black ('tinged to blue') rectangle.   We see the same thing clipping out past the edges of 'real' water areas, where there's an open-space for the water to sit.
-					
-					What we want is to have this absolutely fade to complete black if the pixels underneath are, themselves, jet black, so we can use any blending we want, and not just certain blend modes that will naturally 'fade to black'.
-					
-					
-					One oddity you'll notice here is we don't do a search-up; this is probably due to how water has a surface at the top - so our sampling is not a + sign, but rather a T shape.
-				*/
 				
-				/*
-				vec4 search_left = texture2D(u_anura_tex_map, texcoord + vec2(-10.0/u_anura_draw_area[2], 0.0));
-				vec4 search_right = texture2D(u_anura_tex_map, texcoord + vec2(+10.0/u_anura_draw_area[2], 0.0));
-				vec4 search_down = texture2D(u_anura_tex_map, texcoord + vec2(0.0, +10.0/u_anura_draw_area[2]));
-
-				float grayscale_left = search_left[0] + search_left[1] + search_left[2];
-				float grayscale_right = search_right[0] + search_right[1] + search_right[2];
-				float grayscale_down = search_down[0] + search_down[1] + search_down[2];
-				*/
-
-				/*
-					The 0.02 values here are basically an 'epsilon value' to make sure we catch 'very close to black'.
-				*/
 				
-				//float final_fb_grayscale = min( fb_grayscale, min( grayscale_left, min( grayscale_right, grayscale_down )));
-				//float final_fb_grayscale = (fb_grayscale + grayscale_left + grayscale_right + grayscale_down )/4.0;
-				float final_fb_grayscale = fb_grayscale;
 				
-				//if(fb_grayscale < 0.02 || grayscale_left < 0.02 || grayscale_right < 0.02 || grayscale_down < 0.02) {
-					//finally, the actual blend mode:
-				/*
-					if(final_fb_grayscale < 0.02) {
-						float grayscale_threshold = 0.35;
-						if(fb_grayscale < grayscale_threshold) {
-							blend_color[3] *= fb_grayscale / grayscale_threshold;
-						}
+//				float blur_coefficients[13] = [1/4096, 12/4096, 66/4096, 220/4096, 495/4096, 792/4096, 924/4096, 792/4096, 495/4096, 220/4096, 66/4096, 12/4096, 1/4096];
+				//const float blur_coefficients[13] = float[13](0.000244140625, 0.0029296875, 0.01611328125, 0.0537109375, 0.120849609375, 0.193359375, 0.2255859375, 0.193359375, 0.120849609375, 0.0537109375, 0.01611328125, 0.0029296875, 0.000244140625);
+				
+				float blur_coefficients[13];
+				blur_coefficients[0] = 0.000244140625;
+				blur_coefficients[1] = 0.0029296875;
+				blur_coefficients[2] = 0.01611328125;
+				blur_coefficients[3] = 0.0537109375;
+				blur_coefficients[4] = 0.120849609375;
+				blur_coefficients[5] = 0.193359375;
+				blur_coefficients[6] = 0.2255859375;
+				blur_coefficients[7] = 0.193359375;
+				blur_coefficients[8] = 0.120849609375;
+				blur_coefficients[9] = 0.0537109375;
+				blur_coefficients[10] = 0.01611328125;
+				blur_coefficients[11] = 0.0029296875;
+				blur_coefficients[12] = 0.000244140625;
+				
+								
+				float blur_accumulator = 0;
+				for(int i = 0; i != 13; ++i) {
+					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2( (2 * (i - 6))  /u_anura_draw_area[2], 0.0));
+				
+					if(
+						(vec4(color[0],color[1],color[2], 0.0) == vec4(0.0,0.0,0.0,0.0))
+					){
+						blur_accumulator += blur_coefficients[i];
 					}
-				*/
-				
+					
+				}
 				
 				float proximity_self = ( vec4(fb_color[0],fb_color[1],fb_color[2], 0.0) == vec4(0.0,0.0,0.0,0.0)) ? 1 : 0;
 				
@@ -561,7 +554,7 @@
 					}
 				}				
 				
-				float proximity = proximity_left; //min(proximity_self, min(proximity_left, 1.0));
+				float proximity = blur_accumulator; 
 				
 				if( elide_pixel ) {
 					gl_FragColor = fb_color;
