Also experimenting with a vertical blur, leading to what's likely a box blur.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -521,17 +521,31 @@
 				blur_coefficients[12] = 0.000244140625;
 				
 								
-				float blur_accumulator = 0;
+				float blur_accumulator_h = 0;
 				for(int i = 0; i != 13; ++i) {
 					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2( (2 * (i - 6))  /u_anura_draw_area[2], 0.0));
 				
 					if(
 						(vec4(color[0],color[1],color[2], 0.0) == vec4(0.0,0.0,0.0,0.0))
 					){
-						blur_accumulator += blur_coefficients[i];
+						blur_accumulator_h += blur_coefficients[i];
 					}
 					
 				}
+
+				float blur_accumulator_v = 0;
+				for(int i = 0; i != 13; ++i) {
+					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2(0.0,  (2 * (i - 6))  /u_anura_draw_area[3]));
+				
+					if(
+						(vec4(color[0],color[1],color[2], 0.0) == vec4(0.0,0.0,0.0,0.0))
+					){
+						blur_accumulator_v += blur_coefficients[i];
+					}
+					
+				}
+				
+				float blur_accumulator = mix(blur_accumulator_h, blur_accumulator_v, 0.5);
 				
 				float proximity_self = ( vec4(fb_color[0],fb_color[1],fb_color[2], 0.0) == vec4(0.0,0.0,0.0,0.0)) ? 1 : 0;
 				
