--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -505,25 +505,58 @@
 //				float blur_coefficients[13] = [1/4096, 12/4096, 66/4096, 220/4096, 495/4096, 792/4096, 924/4096, 792/4096, 495/4096, 220/4096, 66/4096, 12/4096, 1/4096];
 				//const float blur_coefficients[13] = float[13](0.000244140625, 0.0029296875, 0.01611328125, 0.0537109375, 0.120849609375, 0.193359375, 0.2255859375, 0.193359375, 0.120849609375, 0.0537109375, 0.01611328125, 0.0029296875, 0.000244140625);
 				
-				float blur_coefficients[13];
-				blur_coefficients[0] = 0.000244140625;
-				blur_coefficients[1] = 0.0029296875;
-				blur_coefficients[2] = 0.01611328125;
-				blur_coefficients[3] = 0.0537109375;
-				blur_coefficients[4] = 0.120849609375;
-				blur_coefficients[5] = 0.193359375;
-				blur_coefficients[6] = 0.2255859375;
-				blur_coefficients[7] = 0.193359375;
-				blur_coefficients[8] = 0.120849609375;
-				blur_coefficients[9] = 0.0537109375;
-				blur_coefficients[10] = 0.01611328125;
-				blur_coefficients[11] = 0.0029296875;
-				blur_coefficients[12] = 0.000244140625;
-				
+				float blur_coefficients[33];
+//				blur_coefficients[0] = 0.000244140625;
+//				blur_coefficients[1] = 0.0029296875;
+//				blur_coefficients[2] = 0.01611328125;
+//				blur_coefficients[3] = 0.0537109375;
+//				blur_coefficients[4] = 0.120849609375;
+//				blur_coefficients[5] = 0.193359375;
+//				blur_coefficients[6] = 0.2255859375;
+//				blur_coefficients[7] = 0.193359375;
+//				blur_coefficients[8] = 0.120849609375;
+//				blur_coefficients[9] = 0.0537109375;
+//				blur_coefficients[10] = 0.01611328125;
+//				blur_coefficients[11] = 0.0029296875;
+//				blur_coefficients[12] = 0.000244140625;
+
+				blur_coefficients[0] =  0.000000000232830643653869;
+				blur_coefficients[1] =  0.000000007450580596923828;
+				blur_coefficients[2] =  0.00000011548399925231934;
+				blur_coefficients[3] =  0.0000011548399925231934;
+				blur_coefficients[4] =  0.000008372589945793152;
+				blur_coefficients[5] =  0.00004688650369644165;
+				blur_coefficients[6] =  0.00021098926663398743;
+				blur_coefficients[7] =  0.000783674418926239;
+				blur_coefficients[8] =  0.002448982559144497;
+				blur_coefficients[9] =  0.0065306201577186584;
+				blur_coefficients[10] = 0.015020426362752914;
+				blur_coefficients[11] = 0.03004085272550583;
+				blur_coefficients[12] = 0.0525714922696352;
+				blur_coefficients[13] = 0.08087921887636185;
+				blur_coefficients[14] = 0.10976465418934822;
+				blur_coefficients[15] = 0.13171758502721786;
+				blur_coefficients[16] = 0.13994993409141898;
+				blur_coefficients[17] = 0.13171758502721786;
+				blur_coefficients[18] = 0.10976465418934822;
+				blur_coefficients[19] = 0.08087921887636185;
+				blur_coefficients[20] = 0.0525714922696352;
+				blur_coefficients[21] = 0.03004085272550583;
+				blur_coefficients[22] = 0.015020426362752914;
+				blur_coefficients[23] = 0.0065306201577186584;
+				blur_coefficients[24] = 0.002448982559144497;
+				blur_coefficients[25] = 0.000783674418926239;
+				blur_coefficients[26] = 0.00021098926663398743;
+				blur_coefficients[27] = 0.00004688650369644165;
+				blur_coefficients[28] = 0.000008372589945793152;
+				blur_coefficients[29] = 0.0000011548399925231934;
+				blur_coefficients[30] = 0.00000011548399925231934;
+				blur_coefficients[31] = 0.000000007450580596923828;
+				blur_coefficients[32] = 0.000000000232830643653869;			
 								
 				float blur_accumulator_h = 0;
-				for(int i = 0; i != 13; ++i) {
-					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2( (2 * (i - 6))  /u_anura_draw_area[2], 0.0));
+				for(int i = 0; i != 33; ++i) {
+					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2( (1 * (i - 6))  /u_anura_draw_area[2], 0.0));
 				
 					if(
 						(vec4(color[0],color[1],color[2], 0.0) == vec4(0.0,0.0,0.0,0.0))
@@ -534,8 +567,8 @@
 				}
 
 				float blur_accumulator_v = 0;
-				for(int i = 0; i != 13; ++i) {
-					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2(0.0,  (2 * (i - 6))  /u_anura_draw_area[3]));
+				for(int i = 0; i != 33; ++i) {
+					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2(0.0,  (1 * (i - 6))  /u_anura_draw_area[3]));
 				
 					if(
 						(vec4(color[0],color[1],color[2], 0.0) == vec4(0.0,0.0,0.0,0.0))
