Bulldoze a bunch of the commented-out shader code once we've confirmed deleting it doesn't break anything.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -502,23 +502,8 @@
 				
 				
 				
-//				float blur_coefficients[13] = [1/4096, 12/4096, 66/4096, 220/4096, 495/4096, 792/4096, 924/4096, 792/4096, 495/4096, 220/4096, 66/4096, 12/4096, 1/4096];
-				//const float blur_coefficients[13] = float[13](0.000244140625, 0.0029296875, 0.01611328125, 0.0537109375, 0.120849609375, 0.193359375, 0.2255859375, 0.193359375, 0.120849609375, 0.0537109375, 0.01611328125, 0.0029296875, 0.000244140625);
 				
 				float blur_coefficients[33];
-//				blur_coefficients[0] = 0.000244140625;
-//				blur_coefficients[1] = 0.0029296875;
-//				blur_coefficients[2] = 0.01611328125;
-//				blur_coefficients[3] = 0.0537109375;
-//				blur_coefficients[4] = 0.120849609375;
-//				blur_coefficients[5] = 0.193359375;
-//				blur_coefficients[6] = 0.2255859375;
-//				blur_coefficients[7] = 0.193359375;
-//				blur_coefficients[8] = 0.120849609375;
-//				blur_coefficients[9] = 0.0537109375;
-//				blur_coefficients[10] = 0.01611328125;
-//				blur_coefficients[11] = 0.0029296875;
-//				blur_coefficients[12] = 0.000244140625;
 
 				blur_coefficients[0] =  0.000000000232830643653869;
 				blur_coefficients[1] =  0.000000007450580596923828;
@@ -580,28 +565,9 @@
 				
 				float blur_accumulator = mix(blur_accumulator_h, blur_accumulator_v, 0.5);
 				
-				float proximity_self = ( vec4(fb_color[0],fb_color[1],fb_color[2], 0.0) == vec4(0.0,0.0,0.0,0.0)) ? 1 : 0;
 				
-				float proximity_left = 0;
-				for(int i = 0; i != 32; ++i) {
-					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2( (-1 * i)  /u_anura_draw_area[2], 0.0));
-					if(
-						(vec4(color[0],color[1],color[2], 0.0) == vec4(0.0,0.0,0.0,0.0))
-					){
-						proximity_left =  (32 - i)/32.0;
-						break;
-					}
-				}
 
-				float proximity_right = 0;
-				for(int i = 0; i != 32; ++i) {
-					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2( (1 * i)  /u_anura_draw_area[2], 0.0));
-					if(vec4(color[0],color[1],color[2], 0.0) == vec4(0.0,0.0,0.0,0.0)){
-						proximity_right = (1 - (32 - i)/32.0);
-					}
-				}				
-				
-				float proximity = blur_accumulator; 
+
 				
 				if( elide_pixel ) {
 					gl_FragColor = fb_color;
@@ -609,7 +575,7 @@
 					vec4 mostly_transparent_blend = blend_color;
 					
 					//this is the magic line that makes black = transparent.
-					mostly_transparent_blend[3] = proximity; //final_fb_grayscale;
+					mostly_transparent_blend[3] = blur_accumulator; //final_fb_grayscale;
 				
 					
 					vec4 linear_blend = mix(fb_color, blend_color, blend_color[3]);
