--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -409,11 +409,22 @@
 					return sqrt(1.0 - pow( (t-1.0), 2.0 ) )/2;
 				}
 			}
-			
+
+			float blendOverlay(float base, float blend) {
+				return base<0.5?(2.0*base*blend):(1.0-2.0*(1.0-base)*(1.0-blend));
+			}
+
+			vec3 blendOverlay(vec3 base, vec3 blend) {
+				return vec3(blendOverlay(base.r,blend.r),blendOverlay(base.g,blend.g),blendOverlay(base.b,blend.b));
+			}
+
+			vec3 blendOverlay(vec3 base, vec3 blend, float opacity) {
+				return (blendOverlay(base, blend) * opacity + base * (1.0 - opacity));
+			}			
 		
 			void main()
 			{
-				vec4 blend_color = vec4(0.0,0.0,0.0,0.0);
+				vec4 liquid_tex_color = vec4(0.0,0.0,0.0,0.0);
 				vec2 texcoord = v_texcoord;
 				bool elide_pixel = true;
 				
@@ -482,7 +493,7 @@
 						
 						elide_pixel = false;
 						
-						blend_color =	(
+						liquid_tex_color =	(
 											texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.0)) +
 											texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.5))
 										)*0.5; //vec4(0.0,200/255.0,150/255.0,0.5);
@@ -572,15 +583,24 @@
 				if( elide_pixel ) {
 					gl_FragColor = fb_color;
 				} else {
-					vec4 mostly_transparent_blend = blend_color;
+					vec4 blurred_liquid = liquid_tex_color;
 					
-					//this is the magic line that makes black = transparent.
-					mostly_transparent_blend[3] = blur_accumulator; //final_fb_grayscale;
+					blurred_liquid[3] = blur_accumulator;
 				
 					
-					vec4 linear_blend = mix(fb_color, blend_color, blend_color[3]);
+					
+					vec3 semifinal_color = blendOverlay(
+						vec3( fb_color.r, fb_color.g, fb_color.b),
+						vec3( blurred_liquid.r, blurred_liquid.g, blurred_liquid.b),
+						blurred_liquid.a
+					);
+					
+					vec4 final_color = vec4(semifinal_color.r, semifinal_color.g, semifinal_color.b, blurred_liquid.a);
+					gl_FragColor = final_color;					
+					
+					//vec4 linear_blend = mix(fb_color, liquid_tex_color, liquid_tex_color[3]);
 
-					gl_FragColor = mix( blend_color, fb_color,   (mostly_transparent_blend[3]));
+					//mix( liquid_tex_color, fb_color,   (blurred_liquid[3]));
 				}
 
 			}
