--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -421,6 +421,19 @@
 			vec3 blendOverlay(vec3 base, vec3 blend, float opacity) {
 				return (blendOverlay(base, blend) * opacity + base * (1.0 - opacity));
 			}			
+
+
+			float blendScreen(float base, float blend) {
+				return 1.0-((1.0-base)*(1.0-blend));
+			}
+
+			vec3 blendScreen(vec3 base, vec3 blend) {
+				return vec3(blendScreen(base.r,blend.r),blendScreen(base.g,blend.g),blendScreen(base.b,blend.b));
+			}
+
+			vec3 blendScreen(vec3 base, vec3 blend, float opacity) {
+				return (blendScreen(base, blend) * opacity + base * (1.0 - opacity));
+			}
 		
 			void main()
 			{
@@ -574,7 +587,7 @@
 					
 				}
 				
-				float blur_accumulator = mix(blur_accumulator_h, blur_accumulator_v, 0.5);
+				float blur_accumulator = 1.0 - mix(blur_accumulator_h, blur_accumulator_v, 0.5);
 				
 				
 
@@ -589,7 +602,7 @@
 				
 					
 					
-					vec3 semifinal_color = blendOverlay(
+					vec3 semifinal_color = blendScreen(
 						vec3( fb_color.r, fb_color.g, fb_color.b),
 						vec3( blurred_liquid.r, blurred_liquid.g, blurred_liquid.b),
 						blurred_liquid.a
@@ -597,10 +610,6 @@
 					
 					vec4 final_color = vec4(semifinal_color.r, semifinal_color.g, semifinal_color.b, blurred_liquid.a);
 					gl_FragColor = final_color;					
-					
-					//vec4 linear_blend = mix(fb_color, liquid_tex_color, liquid_tex_color[3]);
-
-					//mix( liquid_tex_color, fb_color,   (blurred_liquid[3]));
 				}
 
 			}
