Did an mix of both 'screen' and 'overlay' blend modes to get the intended feel.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -602,11 +602,19 @@
 				
 					
 					
-					vec3 semifinal_color = blendScreen(
+					vec3 screen_blended_color = blendScreen(
 						vec3( fb_color.r, fb_color.g, fb_color.b),
 						vec3( blurred_liquid.r, blurred_liquid.g, blurred_liquid.b),
 						blurred_liquid.a
 					);
+
+					vec3 overlay_blended_color = blendOverlay(
+						vec3( fb_color.r, fb_color.g, fb_color.b),
+						vec3( blurred_liquid.r, blurred_liquid.g, blurred_liquid.b),
+						blurred_liquid.a
+					);
+					
+					vec3 semifinal_color = mix(screen_blended_color, overlay_blended_color, 0.65);
 					
 					vec4 final_color = vec4(semifinal_color.r, semifinal_color.g, semifinal_color.b, blurred_liquid.a);
 					gl_FragColor = final_color;					
