--- a/data/objects/effects/liquids/acid_controller.cfg
+++ b/data/objects/effects/liquids/acid_controller.cfg
@@ -65,6 +65,12 @@ on_create: "[
 			shader_info: 'new_acid_distort'
 		}])
 	),
+	spawn('acid_controller.underlay', mid_x, mid_y, {
+		_x_bound: _x_bound,
+		_x2_bound: _x2_bound,
+		_y_bound: _y_bound,
+		_y2_bound: _y2_bound,
+	}),
 ]",
 
 animation: {
@@ -111,6 +117,35 @@ particle_system: [
 			frames_per_row: 5,
 			scale: 2,
 			duration: 8,
+		},
+	},
+],
+object_type: [
+	{
+		id: "underlay",
+		zorder: "@include data/zorder.cfg:background_parallax_walls_further",
+		properties: {
+		#-------------------------- vars --------------------------#
+			_x_bound: { type: "int", default: 0, persistent: false },
+			_x2_bound: { type: "int", default: 0, persistent: false },
+			_y_bound: { type: "int", default: 0, persistent: false },
+			_y2_bound: { type: "int", default: 0, persistent: false },
+
+			_offset: { type: "decimal", default: 0, persistent: false },
+		},
+		on_create: "[fire_event('calculate_segments')]",
+		on_calculate_segments: "[set(x,_x_bound),set(y,_y_bound),set(draw_area, [0, _offset, abs(_x2_bound-_x_bound)/2, abs(_y2_bound-_y_bound)/2])]",
+		on_process: "[add(_offset,-0.2),fire_event('calculate_segments')]",
+
+		#we don't want to compile the image since we rely on it tiling.
+		no_compile_image: "liquids/toxic-acid.png",
+		animation: {
+			image: "liquids/toxic-acid.png",
+			id: "normal",
+			x: 0,
+			w: 256,
+			y: 0,
+			h: 256,
 		},
 	},
 ],
