--- a/data/objects/effects/liquids/acid_controller.cfg
+++ b/data/objects/effects/liquids/acid_controller.cfg
@@ -23,7 +23,7 @@ properties: {
 			parent: me,
 			time_to_die: 0,
 			x:x, y:y,
-			zorder: lib.zorder.get('liquid_particle_effects'),
+			zorder: lib.zorder.get('exterior_decor'),
 		})"
 	},
 },
@@ -40,11 +40,12 @@ on_setup_particles: "[
 		raw_particle_system_info + {
 			position: [
 				(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
-				-(_y_bound - mid_y - 3), //Position the center point (of the box emitter) at the top of the body of water. Less 4px to float on top of water surface.
+				-(_y_bound - mid_y - 3 - 9), //Position the center point (of the box emitter) at the top of the body of water. Less 4px to float on top of water surface.
 				0
 			],
 			emitter: (map <- raw_particle_system_info.emitter) + {
 				box_width: _x2_bound - _x_bound - 64*2, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.) Less 64px for fade in/out margins.
+				box_height: 9, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.) Less 64px for fade in/out margins.
 				emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
 					max: (_x2_bound - _x_bound) / 125, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
 				}
@@ -66,6 +67,12 @@ on_create: "[
 		}])
 	),
 	spawn('acid_controller.underlay', mid_x, mid_y, {
+		_x_bound: _x_bound,
+		_x2_bound: _x2_bound,
+		_y_bound: _y_bound,
+		_y2_bound: _y2_bound,
+	}),
+	spawn('acid_controller.top', mid_x, mid_y, {
 		_x_bound: _x_bound,
 		_x2_bound: _x2_bound,
 		_y_bound: _y_bound,
@@ -138,14 +145,41 @@ object_type: [
 		on_process: "[add(_offset,-0.2),fire_event('calculate_segments')]",
 
 		#we don't want to compile the image since we rely on it tiling.
-		no_compile_image: "liquids/toxic-acid.png",
+		no_compile_image: "liquids/toxic-acid-bg.png",
 		animation: {
-			image: "liquids/toxic-acid.png",
+			image: "liquids/toxic-acid-bg.png",
 			id: "normal",
 			x: 0,
 			w: 256,
 			y: 0,
 			h: 256,
+		},
+	},
+	{
+		id: "top",
+		zorder: "@include data/zorder.cfg:exterior_near_background",
+		properties: {
+		#-------------------------- vars --------------------------#
+			_x_bound: { type: "int", default: 0, persistent: false },
+			_x2_bound: { type: "int", default: 0, persistent: false },
+			_y_bound: { type: "int", default: 0, persistent: false },
+			_y2_bound: { type: "int", default: 0, persistent: false },
+
+			_offset: { type: "decimal", default: 0, persistent: false },
+		},
+		on_create: "[fire_event('calculate_segments')]",
+		on_calculate_segments: "[set(x,_x_bound),set(y,_y_bound - 20),set(draw_area, [5.0*sin(_offset), 0, abs(_x2_bound-_x_bound)/2, img_h/2])]",
+		on_process: "[add(_offset,1.5),fire_event('calculate_segments')]",
+
+		#we don't want to compile the image since we rely on it tiling.
+		no_compile_image: "liquids/toxic-acid-bg.png",
+		animation: {
+			image: "liquids/toxic-acid-top.png",
+			id: "normal",
+			x: 0,
+			w: 128,
+			y: 0,
+			h: 16,
 		},
 	},
 ],
