Quick-n-dirty fix to put acid surface bubbles behind solid ground.

--- a/data/objects/effects/liquids/acid_controller.cfg
+++ b/data/objects/effects/liquids/acid_controller.cfg
@@ -23,7 +23,7 @@ properties: {
 			parent: me,
 			time_to_die: 0,
 			x:x, y:y,
-			zorder: lib.zorder.get('exterior_decor'),
+			zorder: lib.zorder.get('interior_back_wall_decor'),
 		})"
 	},
 },
