Working out some perspectivized-bubbles for the acid surface.

--- a/data/particles/acid_surface_bubbles.cfg
+++ b/data/particles/acid_surface_bubbles.cfg
@@ -4,35 +4,35 @@
 			"pixel_coords": true,
 			"time_uv": [
 				{
-					"area": [127.0,2.0,137.0,12.0],
+					"area": [0.0,0.0,25.0,25.0],
 					"time": 0.002
 				},
 				{
-					"area": [141.0,2.0,151.0,12.0],
+					"area": [27.0,0.0,52.0,25.0],
 					"time": 0.004
 				},
 				{
-					"area": [155.0,2.0,165.0,12.0],
+					"area": [54.0,0.0,79.0,25.0],
 					"time": 0.006
 				},
 				{
-					"area": [169.0,2.0,179.0,12.0],
+					"area": [81.0,0.0,106.0,25.0],
 					"time": 0.008
 				},
 				{
-					"area": [183.0,2.0,193.0,12.0],
+					"area": [108.0,0.0,133.0,25.0],
 					"time": 0.010
 				},
 				{
-					"area": [211.0,2.0,221.0,12.0],
+					"area": [135.0,0.0,160.0,25.0],
 					"time": 0.965
 				},
 				{
-					"area": [197.0,2.0,207.0,12.0],
+					"area": [162.0,0.0,187.0,25.0],
 					"time": 0.975
 				},
 				{
-					"area": [225.0,2.0,235.0,12.0],
+					"area": [189.0,0.0,214.0,25.0],
 					"time": 0.99
 				}
 			],
@@ -65,7 +65,7 @@
 			"rotation": 0.0,
 			"scaling": {
 				"max": 10.0,
-				"min": 7.5,
+				"min": 3.75,
 				"type": "random"
 			},
 			"time_to_live": {
@@ -88,6 +88,6 @@
 		"order": 0,
 		"scale": [1.0,-1.0,1.0],
 		"scale_velocity": 0.5,
-		"texture": "particles/particles2.png"
+		"texture": "effects/particles4.png"
 	}
 }
