--- a/data/objects/effects/liquids/water_controller.cfg
+++ b/data/objects/effects/liquids/water_controller.cfg
@@ -4,7 +4,7 @@ prototype: ["liquid"],
 zorder: "@include data/zorder.cfg:liquid_particle_effects",
 
 properties: {
-	liquid_texture: "string :: 'liquids/water.png'",
+	liquid_texture: "string :: 'liquids/water-texture.png'",
 	texture_speed: "decimal :: 0.002",
 
 	add_water_effect: "add_water(_x_bound, _y_bound, _x2_bound, _y2_bound)",
@@ -67,7 +67,7 @@ on_create: "[
 		add(level.frame_buffer_shaders, [{
 			begin_zorder: -10000000,
 			end_zorder: lib.zorder.get('water'),
-			shader_info: 'water_distort'
+			shader_info: 'water_distort_new'
 		}])
 	),
 ]",
