Further work towards a reasonable baseline for the water shader.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -209,10 +209,38 @@
 			//uniform vec4 u_anura_sprite_area;
 			varying vec2 v_texcoord;
 			varying vec2 v_vertex;
+
+
+			float blendOverlay(float base, float blend) {
+				return base<0.5?(2.0*base*blend):(1.0-2.0*(1.0-base)*(1.0-blend));
+			}
+
+			vec3 blendOverlay(vec3 base, vec3 blend) {
+				return vec3(blendOverlay(base.r,blend.r),blendOverlay(base.g,blend.g),blendOverlay(base.b,blend.b));
+			}
+
+			vec3 blendOverlay(vec3 base, vec3 blend, float opacity) {
+				return (blendOverlay(base, blend) * opacity + base * (1.0 - opacity));
+			}			
+
+
+			float blendScreen(float base, float blend) {
+				return 1.0-((1.0-base)*(1.0-blend));
+			}
+
+			vec3 blendScreen(vec3 base, vec3 blend) {
+				return vec3(blendScreen(base.r,blend.r),blendScreen(base.g,blend.g),blendScreen(base.b,blend.b));
+			}
+
+			vec3 blendScreen(vec3 base, vec3 blend, float opacity) {
+				return (blendScreen(base, blend) * opacity + base * (1.0 - opacity));
+			}
+
 			void main()
 			{
-				vec4 blend_color = vec4(0.0,0.0,0.0,0.0);
+				vec4 liquid_tex_color = vec4(0.0,0.0,0.0,0.0);
 				vec2 texcoord = v_texcoord;
+				bool elide_pixel = true;
 
 				/*
 					This steps over multiple water areas - it artificially limits itself to the first 8 water areas that are onscreen (this gets done not here, in the `fragment` call, but down in the `draw` call below).
@@ -275,7 +303,10 @@
 							
 							Rather than doing the 'expected' act of just plopping in a obvious 'single' texture lookup, we're actually doing *two* of them, and taking the average of the two values.  The reason for this is a cheap attempt at making two textures instead of one (essentially just making two 'layers' of the same texture on the screen).  This is meant to make it look a little bit more organic - we might switch this around in the future, but that's all this is doing.
 						*/
-						blend_color =	(
+
+						elide_pixel = false;
+
+						liquid_tex_color =	(
 											texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.0)) +
 											texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.5))
 										)*0.5; //vec4(0.0,200/255.0,150/255.0,0.5);
@@ -291,36 +322,96 @@
 				vec4 fb_color = texture2D(u_anura_tex_map, texcoord);
 				float fb_grayscale = (fb_color[0] + fb_color[1] + fb_color[2])/3.0;
 
-				/*
-					This section does something fairly unintuitive - basically it's trying to limit which pixels we actually bother to apply the blend mode to - it's specifically trying to make it so none of them get applied in the middle.
-					
-					If we just naively apply our blend-mode everywhere, unless we have a really specific type of blend mode, when it's applied with water layered over the 'jet black' fill color, it won't entirely fade to black.  In the most extreme case, if we just laid a water area over a block of completely solid tiles (i.e. just a giant rectangle of pure black on the screen), we'd end up with a slightly off-black ('tinged to blue') rectangle.   We see the same thing clipping out past the edges of 'real' water areas, where there's an open-space for the water to sit.
-					
-					What we want is to have this absolutely fade to complete black if the pixels underneath are, themselves, jet black, so we can use any blending we want, and not just certain blend modes that will naturally 'fade to black'.
-					
-					
-					One oddity you'll notice here is we don't do a search-up; this is probably due to how water has a surface at the top - so our sampling is not a + sign, but rather a T shape.
-				*/
-				vec4 search_left = texture2D(u_anura_tex_map, texcoord + vec2(-10.0/u_anura_draw_area[2], 0.0));
-				vec4 search_right = texture2D(u_anura_tex_map, texcoord + vec2(+10.0/u_anura_draw_area[2], 0.0));
-				vec4 search_down = texture2D(u_anura_tex_map, texcoord + vec2(0.0, +10.0/u_anura_draw_area[2]));
+				float blur_coefficients[33];
 
-				float grayscale_left = search_left[0] + search_left[1] + search_left[2];
-				float grayscale_right = search_right[0] + search_right[1] + search_right[2];
-				float grayscale_down = search_down[0] + search_down[1] + search_down[2];
-
-				/*
-					The 0.02 values here are basically an 'epsilon value' to make sure we catch 'very close to black'.
-				*/
-				if(fb_grayscale < 0.02 || grayscale_left < 0.02 || grayscale_right < 0.02 || grayscale_down < 0.02) {
-					float grayscale_threshold = 0.35;
-					if(fb_grayscale < grayscale_threshold) {
-						blend_color[3] *= fb_grayscale / grayscale_threshold;
+				blur_coefficients[0] =  0.000000000232830643653869;
+				blur_coefficients[1] =  0.000000007450580596923828;
+				blur_coefficients[2] =  0.00000011548399925231934;
+				blur_coefficients[3] =  0.0000011548399925231934;
+				blur_coefficients[4] =  0.000008372589945793152;
+				blur_coefficients[5] =  0.00004688650369644165;
+				blur_coefficients[6] =  0.00021098926663398743;
+				blur_coefficients[7] =  0.000783674418926239;
+				blur_coefficients[8] =  0.002448982559144497;
+				blur_coefficients[9] =  0.0065306201577186584;
+				blur_coefficients[10] = 0.015020426362752914;
+				blur_coefficients[11] = 0.03004085272550583;
+				blur_coefficients[12] = 0.0525714922696352;
+				blur_coefficients[13] = 0.08087921887636185;
+				blur_coefficients[14] = 0.10976465418934822;
+				blur_coefficients[15] = 0.13171758502721786;
+				blur_coefficients[16] = 0.13994993409141898;
+				blur_coefficients[17] = 0.13171758502721786;
+				blur_coefficients[18] = 0.10976465418934822;
+				blur_coefficients[19] = 0.08087921887636185;
+				blur_coefficients[20] = 0.0525714922696352;
+				blur_coefficients[21] = 0.03004085272550583;
+				blur_coefficients[22] = 0.015020426362752914;
+				blur_coefficients[23] = 0.0065306201577186584;
+				blur_coefficients[24] = 0.002448982559144497;
+				blur_coefficients[25] = 0.000783674418926239;
+				blur_coefficients[26] = 0.00021098926663398743;
+				blur_coefficients[27] = 0.00004688650369644165;
+				blur_coefficients[28] = 0.000008372589945793152;
+				blur_coefficients[29] = 0.0000011548399925231934;
+				blur_coefficients[30] = 0.00000011548399925231934;
+				blur_coefficients[31] = 0.000000007450580596923828;
+				blur_coefficients[32] = 0.000000000232830643653869;			
+								
+				float blur_accumulator_h = 0;
+				for(int i = 0; i != 33; ++i) {
+					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2( (1 * (i - 6))  /u_anura_draw_area[2], 0.0));
+				
+					if(
+						(vec4(color[0],color[1],color[2], 0.0) == vec4(0.0,0.0,0.0,0.0))
+					){
+						blur_accumulator_h += blur_coefficients[i];
 					}
+					
 				}
 
+				float blur_accumulator_v = 0;
+				for(int i = 0; i != 33; ++i) {
+					vec4 color = texture2D(u_anura_tex_map, texcoord + vec2(0.0,  (1 * (i - 6))  /u_anura_draw_area[3]));
+				
+					if(
+						(vec4(color[0],color[1],color[2], 0.0) == vec4(0.0,0.0,0.0,0.0))
+					){
+						blur_accumulator_v += blur_coefficients[i];
+					}
+					
+				}
+				
+				float blur_accumulator = 1.0 - mix(blur_accumulator_h, blur_accumulator_v, 0.5);
 
-				gl_FragColor = mix(fb_color, blend_color, blend_color[3]);
+
+				if( elide_pixel ) {
+					gl_FragColor = fb_color;
+				} else {
+					vec4 blurred_liquid = liquid_tex_color;
+		
+					blurred_liquid[3] = blur_accumulator;
+					
+					
+					vec3 screen_blended_color = blendScreen(
+						vec3( fb_color.r, fb_color.g, fb_color.b),
+						vec3( blurred_liquid.r, blurred_liquid.g, blurred_liquid.b),
+						blurred_liquid.a
+					);
+
+					vec3 overlay_blended_color = blendOverlay(
+						vec3( fb_color.r, fb_color.g, fb_color.b),
+						vec3( blurred_liquid.r, blurred_liquid.g, blurred_liquid.b),
+						blurred_liquid.a
+					);
+					
+					vec3 semifinal_color = mix(screen_blended_color, overlay_blended_color, 0.9);
+					
+					vec4 final_color = vec4(semifinal_color.r, semifinal_color.g, semifinal_color.b, blurred_liquid.a);
+					vec4 attenuated_final_color = mix(final_color, fb_color, 0.75);
+					
+					gl_FragColor = attenuated_final_color;					
+				}
 			}
 		",
 
