Fix liquids breaking loading and not loading correctly.

--- a/data/object_prototypes/general/liquid.cfg
+++ b/data/object_prototypes/general/liquid.cfg
@@ -55,9 +55,8 @@ on_start_level: "
 		_y2_bound - _y_bound + 100]
 		)",
 
-on_load: "add_particle_effect",
-
-on_create: "[
+on_load: "[
+	add_particle_effect,
 	add_object(liquid_surface),
 	fire_event(liquid_surface, 'create'),
 ]",
@@ -174,12 +173,19 @@ object_type: [{
 			filter_radius = 3, //pattern needs a few elements on each side as buffer
 	) asserting parent is obj liquid | 'No liquid set for surface.'",
 	
-	animation: {
+	animation: [{
 		id: "normal",
 		image: "effects/particles.png",
 		x: 117, y: 42, w: 28, h: 28,
 		frames: 1,
 		duration: 1000,
-	},
+	}, {
+		//We need a dummy frame here to give the object time to load in and set fbo to the water texture with cairo draw commands.
+		id: "fbo",
+		image: "effects/particles.png",
+		x: 117, y: 42, w: 28, h: 28,
+		frames: 1,
+		duration: 1000,
+	}],
 }]
 }
