--- a/data/objects/effects/liquids/acid_controller.cfg
+++ b/data/objects/effects/liquids/acid_controller.cfg
@@ -57,7 +57,7 @@ on_setup_particles: "[
 	add_object(acid_surface_bubbles),
 ]",
 
-on_create: "[
+on_load: "[
 	%PROTO%, //Add the liquid surface effect.
 	if(find(level.frame_buffer_shaders, value.shader_info = 'new_acid_distort') = null,
 		add(level.frame_buffer_shaders, [{
