--- a/data/objects/effects/liquids/water_controller.cfg
+++ b/data/objects/effects/liquids/water_controller.cfg
@@ -61,7 +61,7 @@ animation: {
 	duration: 1000,
 },
 
-on_create: "[
+on_load: "[
 	%PROTO%, //Add the liquid surface effect.
 	if(find(level.frame_buffer_shaders, value.shader_info = 'water_distort') = null,
 		add(level.frame_buffer_shaders, [{
