Fix for lights breaking loading.

--- a/data/object_prototypes/general/effects_attache_glow.cfg
+++ b/data/object_prototypes/general/effects_attache_glow.cfg
@@ -69,6 +69,7 @@ properties: {
 
 	light_circular: {
 		type: "obj light_source_attache",
+		persistent: false,
 		init: "object('light_source_attache', mid_x, mid_y, {
 			_sprite_type: enum eased_halo,
 			time_to_die: 0,
