Fixed enter not loading games. (Space and any action key do too.)

--- a/data/objects/playable/menu_selector.cfg
+++ b/data/objects/playable/menu_selector.cfg
@@ -73,7 +73,7 @@ on_ctrl_attack: "fire_event('ctrl_tongue')",
 on_ctrl_jump: "fire_event('ctrl_tongue')",
 
 on_process:"
-	if(13 in ctrl_keys or ' ' in ctrl_keys,
+	if(' ' in ctrl_keys or 'Return' in ctrl_keys,
 		fire_event('finish_menu')
 	)",
 
