Fixed loading levels with mook spawners in them.

--- a/data/object_prototypes/general/periodic_mook_spawner.cfg
+++ b/data/object_prototypes/general/periodic_mook_spawner.cfg
@@ -16,7 +16,7 @@ properties: {
 		*/
 
 		//	This one needs to have it's fields manually set in the constructor.  You'll do this by setting max_objects and spawn_type elsewhere.
-	_mook_tracker:	{ type: "class mook_spawning_tracker", init: "construct('mook_spawning_tracker',{this_obj: me, _lvl: level, spawnee_types: ['ant_black'], max_objects: 3})" },
+	_mook_tracker:	{ type: "class mook_spawning_tracker", init: "construct('mook_spawning_tracker',{this_obj: me, spawnee_types: ['ant_black'], max_objects: 3})" },
 		//	This one needs editor-info values.
 	spawn_type: { type: "string", default: "'ant_black'" },
 	valid_spawn_types: "[string] :: ['ant_black']",
