Corrected some inconsistent whitespace in the water shader to ensure it's almost identical to the acid shader, to make diffing easier.

--- a/data/objects/effects/liquids/water_controller.cfg
+++ b/data/objects/effects/liquids/water_controller.cfg
@@ -63,12 +63,13 @@ animation: {
 
 on_load: "[
 	%PROTO%, //Add the liquid surface effect.
-	if(find(level.frame_buffer_shaders, value.shader_info = 'water_distort') = null,
+	if(find(level.frame_buffer_shaders, value.shader_info = 'water_distort_new') = null,
 		add(level.frame_buffer_shaders, [{
 			begin_zorder: -10000000,
 			end_zorder: lib.zorder.get('water'),
 			shader_info: 'water_distort_new'
 		}])
 	),
+
 ]",
 }
