--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -209,7 +209,27 @@
 			//uniform vec4 u_anura_sprite_area;
 			varying vec2 v_texcoord;
 			varying vec2 v_vertex;
+			
+			float ease_out_circ(float t)
+			{
+				return sqrt(1.0 - pow( (t-1.0), 2.0 ) );
+			}
 
+			float ease_in_circ(float t)
+			{
+				return 1 - sqrt(1 - pow(t,2) );
+			}
+
+			float ease_in_out_circ(float t)
+			{
+				float time = t*2;
+
+				if(time < 1){ 
+					return ( 1 - sqrt(1 - pow(t,2) ) )/2;
+				} else {
+					return sqrt(1.0 - pow( (t-1.0), 2.0 ) )/2;
+				}
+			}
 
 			float blendOverlay(float base, float blend) {
 				return base<0.5?(2.0*base*blend):(1.0-2.0*(1.0-base)*(1.0-blend));
@@ -235,13 +255,13 @@
 			vec3 blendScreen(vec3 base, vec3 blend, float opacity) {
 				return (blendScreen(base, blend) * opacity + base * (1.0 - opacity));
 			}
-
+		
 			void main()
 			{
 				vec4 liquid_tex_color = vec4(0.0,0.0,0.0,0.0);
 				vec2 texcoord = v_texcoord;
 				bool elide_pixel = true;
-
+				
 				/*
 					This steps over multiple water areas - it artificially limits itself to the first 8 water areas that are onscreen (this gets done not here, in the `fragment` call, but down in the `draw` call below).
 					
@@ -250,7 +270,7 @@
 					Since of course this is a shader, the end result we're going for is just one single pixel's color, so any 'scanning over multiple pixels' is just to get ingredients, not to output more than one. 
 				*/
 				for(int n = 0; n != 8; ++n) {
-				
+
 						//If a water rect's has negative width, don't do anything.  Any checks like this will leave us with the default colors (set above), which conveniently happen to be 'transparent', so the shader won't mess up any unintended pixels. 
 					if(u_water_area[n][0] >= u_water_area[n][2]) {
 						break;
@@ -260,22 +280,23 @@
 					float top = max(u_anura_draw_area[1], u_water_area[n][1]);
 					float right = min(u_anura_draw_area[2], u_water_area[n][2]);
 					float bottom = min(u_anura_draw_area[3], u_water_area[n][3]);
-
+					
 						//just do a quick bounds check
 					if(	v_vertex.x > left
 						&& v_vertex.y > top
 						&& v_vertex.x < right 
 						&& v_vertex.y < bottom
 					){
-
+					
 						/*
 							This is the heart of our 'distortion'; right now, this works by only 'wobbling' the x-coord of the pixel; basically we decide to sample from a different point in the source texture, based on the current timestamp.
 							
 							`falloff_ratio` is a 0.0~1.0 float; it attenuates how much horizontal distortion there is.  The idea is that when we get closer to the edge of the water rectangle, we want to reduce the amount of distortion - asymptotically approaching no movement at all when we're flush with the edge of the rectangle.  There are two reasons for this - the first one is that it lines up with how fluid dynamics work IRL - actual liquids in i.e. a Pipe barely move near the edges of it, and have their highest flow out in the middle.   It also, conveniently, completely kills any problems of 'seaming' at the edge of the rectangle.
 						*/
 						float falloff_ratio = min(min(v_vertex.x - left, right - v_vertex.x)/40.0,1.0);
-
+						
 						texcoord.x = texcoord.x + falloff_ratio*sin((u_anura_draw_area[0] + v_vertex.x)*0.02 + u_anura_cycle/20.0)/300.0;
+						
 
 						/*
 							The following several lines of code basically are figuring out an XY point - their goal is basically let us 'draw the water texture' by essentially deciding where the final pixel is on the screen, and using that to decide where, in the water texture, we should be sampling.  If they're all offset consistently, we'll just be sampling one-by-one and basically 'redrawing' the water texture wherever we want it, pixel by pixel.
@@ -295,25 +316,26 @@
 							Then we take that and divide it against the dimensions of the water texture — again, yielding a fraction.  This is meant to tell us where in the water texture we want to sample.  This handles the issue of 'repeating' the texture horizontally and vertically.
 						*/
 						loc.x *= u_anura_draw_area[2]/u_water_tex_dim;
-						loc.y *= u_anura_draw_area[2]/u_water_tex_dim;
-
+						loc.y *= u_anura_draw_area[2]/u_water_tex_dim;  //<-- this should probably be u_anura_draw_area[3]?
+						
 						
 						/*
 							Finally, we do a little bit of weird mumbo-jumbo to make the end product look a little more organic.
 							
 							Rather than doing the 'expected' act of just plopping in a obvious 'single' texture lookup, we're actually doing *two* of them, and taking the average of the two values.  The reason for this is a cheap attempt at making two textures instead of one (essentially just making two 'layers' of the same texture on the screen).  This is meant to make it look a little bit more organic - we might switch this around in the future, but that's all this is doing.
 						*/
-
+						
 						elide_pixel = false;
-
+						
 						liquid_tex_color =	(
 											texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.0)) +
 											texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.5))
 										)*0.5; //vec4(0.0,200/255.0,150/255.0,0.5);
 					}
 				}
-
-
+				
+				
+				
 				/*
 					This section does an implementation of a 'blend mode' for the whole chunk of water.
 					
@@ -322,6 +344,10 @@
 				vec4 fb_color = texture2D(u_anura_tex_map, texcoord);
 				float fb_grayscale = (fb_color[0] + fb_color[1] + fb_color[2])/3.0;
 
+				
+				
+				
+				
 				float blur_coefficients[33];
 
 				blur_coefficients[0] =  0.000000000232830643653869;
@@ -383,14 +409,18 @@
 				}
 				
 				float blur_accumulator = 1.0 - mix(blur_accumulator_h, blur_accumulator_v, 0.5);
+				
+				
 
 
+				
 				if( elide_pixel ) {
 					gl_FragColor = fb_color;
 				} else {
 					vec4 blurred_liquid = liquid_tex_color;
-		
+					
 					blurred_liquid[3] = blur_accumulator;
+				
 					
 					
 					vec3 screen_blended_color = blendScreen(
@@ -412,6 +442,7 @@
 					
 					gl_FragColor = attenuated_final_color;					
 				}
+
 			}
 		",
 
