Fixed loading a level removing shadows.

--- a/data/objects/experimental/shadow_effect_controller.cfg
+++ b/data/objects/experimental/shadow_effect_controller.cfg
@@ -71,7 +71,7 @@
 	},
 	
 	events: {
-		create: "
+		load: "
 			//add the shader on creation.
 			add(level.frame_buffer_shaders, [{
 				label: 'shadow_effect',
