Fix sounds not playing any more on level load.

--- a/data/objects/effects/sounds/sound_source_coordinator.cfg
+++ b/data/objects/effects/sounds/sound_source_coordinator.cfg
@@ -77,7 +77,7 @@ properties: {
 	
 },
 
-on_create: "playing_sound.play()",
+on_load: "playing_sound.play()",
 
 on_being_removed: "playing_sound.stop(0.1)",
 
