--- a/data/object_prototypes/general/sound_source.cfg
+++ b/data/object_prototypes/general/sound_source.cfg
@@ -276,7 +276,7 @@ properties: {
 },
 
 	
-on_create: "[if(sound_file != '' and sound_enabled,
+on_load: "[if(sound_file != '' and sound_enabled,
 	if(coordinator, [coordinator.add(me),set(_sound_coordinator, coordinator)], _sound_new_coordinator)
 		where coordinator = _sound_coordinator_existing
 	),
