Fix saving, then loading, then saving, then loading crashing the game.

--- a/data/objects/effects/liquids/acid_controller.cfg
+++ b/data/objects/effects/liquids/acid_controller.cfg
@@ -24,7 +24,8 @@ properties: {
 			time_to_die: 0,
 			x:x, y:y,
 			zorder: lib.zorder.get('interior_back_wall_decor'),
-		})"
+		})",
+		serializable: false,
 	},
 },
 
