--- a/data/objects/effects/liquids/water_controller.cfg
+++ b/data/objects/effects/liquids/water_controller.cfg
@@ -20,7 +20,8 @@ properties: {
 			time_to_die: 0,
 			x:x, y:y,
 			zorder: lib.zorder.get('liquid_particle_effects'),
-		})"
+		})",
+		serializable: false,
 	},
 },
 
