Mark generic item description as non-translatable.
	- Should never be seen in game, don't waste translator time.

--- a/data/items.cfg
+++ b/data/items.cfg
@@ -330,9 +330,9 @@
 		hud_img_rect: [42, 84, 81,123],
 	},
 	{
-		name: "~Generic Usable Item~",
+		name: "'Generic Usable Item'", //Note: Not marked as translatable because should never be seen in game.
 		id: "@eval enum item_generic_usable",
-		description: "~Something hacked together by an unassuming programmer to test a new system.~",
+		description: "'Something hacked together by an unassuming programmer to test a new system.'",
 		count_limit: 2,
 		item_category: "@eval enum secondary_item",
 		anim_rect: [1,247,17,262],
