Hack: Fix particle_attaches not working after a save/load cycle.

--- a/data/objects/effects/attaches/particle_attache.cfg
+++ b/data/objects/effects/attaches/particle_attache.cfg
@@ -103,5 +103,7 @@ properties: {
 
 on_create: "proto_event('effects_attache', 'create'); if(_animations, map(_animations, apply_animation(value)))",
 
+//Nasty little hack, it seems when loading property setters don't get run. (This causes our earlier particles != null asserts to fail.)
+on_load: "set(_particle_type, _particle_type); proto_event('effects_attache', 'load')"
 
 }
