--- a/data/objects/props/utilities/ceiling_lamp.cfg
+++ b/data/objects/props/utilities/ceiling_lamp.cfg
@@ -13,6 +13,7 @@ properties: {
 
 	light_cone: {
 		type: "obj light_source_attache",
+		serializable: false, //Light source attache is not serializable, so we need to re-init it.
 		init: "object('light_source_attache', mid_x, mid_y, {
 			_sprite_type: enum elliptical1,
 			time_to_die: 0,
@@ -22,6 +23,7 @@ properties: {
 	},
 	light_circular: {
 		type: "obj light_source_attache",
+		serializable: false, //Light source attache is not serializable, so we need to re-init it.
 		init: "object('light_source_attache', mid_x, mid_y, {
 			_sprite_type: enum eased_halo,
 			time_to_die: 0,
@@ -34,6 +36,7 @@ properties: {
 
 	lamp_spark_particles: { 
 		type: "obj particle_attache", 
+		serializable: false, //Particle attache is not serializable, so we need to re-init it.
 		init: "object('particle_attache', x,y, {
 			_particle_type:'lamp_sparks',
 			parent: me,
@@ -41,10 +44,9 @@ properties: {
 			time_to_die: 0,
 		})"
 	},
-
 },
 
-on_create: "[
+on_load: "[
 	add_object(light_cone),
 	add_object(light_circular),
 	add_object(lamp_spark_particles),
