Fix some objects not creating their lights or sfx correctly on load.

--- a/data/objects/props-interactive/misc/indicator_light_metal.cfg
+++ b/data/objects/props-interactive/misc/indicator_light_metal.cfg
@@ -25,7 +25,7 @@ properties: {
 	}
 },
 
-on_create: "[
+on_load: "[
 				if(is_active, trigger_on, trigger_off),
 				add_object(light_circular),
 			]",
