--- a/data/objects/props/utilities/torch.cfg
+++ b/data/objects/props/utilities/torch.cfg
@@ -25,7 +25,7 @@ properties: {
 },
 
 
-on_create: "[
+on_load: "[
 				spawn('torch_glow',midpoint_x,midpoint_y-20,facing),
 				add_object(_particles),
 				add_object(_sfx),
