--- a/data/objects/props-interactive/misc/soda_machine.cfg
+++ b/data/objects/props-interactive/misc/soda_machine.cfg
@@ -3,7 +3,7 @@ id: "soda_machine",
 zorder: "@include data/zorder.cfg:interior_decor",
 zsub_order: -5,
 is_strict: true,
-on_create: "[spawn('soda_machine.glow_mask',midpoint_x,midpoint_y,facing),
+on_load: "[spawn('soda_machine.glow_mask',midpoint_x,midpoint_y,facing),
 			spawn('sound_source_individual',mid_x,mid_y,{sound_file:'ambient/fridge.ogg'})
 ]",
 prototype: ["cosmetic_effects"],
