Refactored particle_attache stuff to be able to use the constructor system.

--- a/data/objects/effects/attaches/particle_attache.cfg
+++ b/data/objects/effects/attaches/particle_attache.cfg
@@ -89,6 +89,11 @@ properties: {
 		type: "decimal",
 		set: "[set(_data, value), if(value = 0, remove_object(me))]",
 	},
+	
+	particle_effects_load_fix: "[
+		//Nasty little hack, it seems when loading property setters don't get run. (This causes our earlier particles != null asserts to fail.)
+		set(_particle_type, _particle_type)
+	]",
 
 #-------------------------- special setup behavior --------------------------#
 	apply_animation: "def(ParticleSystemAnimation anim) ->commands
@@ -102,8 +107,5 @@ properties: {
 },
 
 on_create: "proto_event('effects_attache', 'create'); if(_animations, map(_animations, apply_animation(value)))",
-
-//Nasty little hack, it seems when loading property setters don't get run. (This causes our earlier particles != null asserts to fail.)
-on_load: "set(_particle_type, _particle_type); proto_event('effects_attache', 'load')"
 
 }
