--- a/data/objects/props/utilities/ceiling_lamp.cfg
+++ b/data/objects/props/utilities/ceiling_lamp.cfg
@@ -32,8 +32,7 @@ properties: {
 			scale: 0.5,
 		})",
 	},
-
-
+	
 	lamp_spark_particles: { 
 		type: "obj particle_attache", 
 		serializable: false, //Particle attache is not serializable, so we need to re-init it.
@@ -44,13 +43,14 @@ properties: {
 			time_to_die: 0,
 		})"
 	},
+	
+	transient_obj_constructor: "[
+		add_object(light_cone),
+		add_object(light_circular),
+		add_object(lamp_spark_particles),
+	]",
 },
 
-on_load: "[
-	add_object(light_cone),
-	add_object(light_circular),
-	add_object(lamp_spark_particles),
-]",
 
 on_enter_normal_anim: "[
 	set(light_circular.scale, 0.5 + 1d0.025),
@@ -59,6 +59,7 @@ on_enter_normal_anim: "[
 	
 	set(lamp_spark_particles.emission_rate, 0),
 ]",
+
 on_flicker: "[
 	sound('light-flicker'+1d5+'.wav'),
 	set(light_circular.scale, 0.15 + 1d0.025),
