--- a/data/objects/props/utilities/ceiling_lamp_silver.cfg
+++ b/data/objects/props/utilities/ceiling_lamp_silver.cfg
@@ -39,14 +39,14 @@ properties: {
 			time_to_die: 0,
 		})",
 	},
+	
+	transient_obj_constructor: "[
+		add_object(light_cone),
+		add_object(light_circular),
+		add_object(lamp_spark_particles),
+	]",
 },
 
-
-on_load: "[
-	add_object(light_cone),
-	add_object(light_circular),
-	add_object(lamp_spark_particles),
-]",
 
 on_enter_normal_anim: "[
 	set(light_circular.scale, 0.5 + 1d0.025),
