--- a/data/object_prototypes/base/transient_object.cfg
+++ b/data/object_prototypes/base/transient_object.cfg
@@ -37,12 +37,14 @@ properties: {
 
 #-------------------------- constructors --------------------------#
 	constructor: "commands :: execute(me,[
+					particle_effects_load_fix ;
 					transient_obj_constructor ;
 					hittable_obj_constructor ;
 					epihittable_obj_constructor ;
 					visual_obj_constructor
 				])",
 
+	particle_effects_load_fix: "commands :: null",
 
 	transient_obj_constructor: "commands :: null",
 
