Added a simple identity-op frame buffer shader for a reduced test case.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -1221,5 +1221,43 @@
 			}
 		",
 	},
+
+	{
+		name: "identity_op",
+		new: true,
+		vertex: "
+			uniform mat4 u_anura_mvp_matrix;
+			attribute vec2 a_anura_vertex;
+			attribute vec2 a_anura_texcoord;
+			varying vec2 v_texcoord;
+			varying vec2 v_vertex;
+			void main()
+			{
+				v_vertex = a_anura_vertex;
+				gl_Position = u_anura_mvp_matrix * vec4(a_anura_vertex, 0.0, 1.0);
+				v_texcoord = a_anura_texcoord;
+			}
+		",
+		fragment: "
+			uniform sampler2D u_anura_tex_map;
+			varying vec2 v_texcoord;
+			varying vec2 v_vertex;
+			
+			void main()
+			{
+				vec4 liquid_tex_color = vec4(0.0,0.0,0.0,0.0);
+				vec2 texcoord = v_texcoord;
+				bool elide_pixel = true;
+
+				vec4 fb_color = texture2D(u_anura_tex_map, texcoord);
+
+				gl_FragColor = fb_color; 
+			}
+		",
+
+		draw: ""
+	},
+
+
 	],
 }
