A background+texture for the water.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -220,8 +220,8 @@
 						elide_pixel = false;
 						
 						liquid_tex_color =	(
-											texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.0)) +
-											texture2D(u_water_tex, loc + vec2(u_anura_cycle*u_water_tex_speed, 0.5))
+											texture2D(u_water_tex, loc + vec2(0.2, u_anura_cycle*u_water_tex_speed)) +
+											texture2D(u_water_tex, loc + vec2(0.5, u_anura_cycle*u_water_tex_speed))
 										)*0.5; //vec4(0.0,200/255.0,150/255.0,0.5);
 					}
 				}
@@ -330,7 +330,7 @@
 					vec3 semifinal_color = mix(screen_blended_color, overlay_blended_color, 0.9);
 					
 					vec4 final_color = vec4(semifinal_color.r, semifinal_color.g, semifinal_color.b, blurred_liquid.a);
-					vec4 attenuated_final_color = mix(final_color, fb_color, 0.75);
+					vec4 attenuated_final_color = mix(final_color, fb_color, 0.2);
 					
 					gl_FragColor = attenuated_final_color;					
 				}
