--- a/data/objects/effects/liquids/water_controller.cfg
+++ b/data/objects/effects/liquids/water_controller.cfg
@@ -4,7 +4,7 @@ prototype: ["liquid"],
 zorder: "@include data/zorder.cfg:liquid_particle_effects",
 
 properties: {
-	liquid_texture: "string :: 'liquids/water-texture.png'",
+	liquid_texture: "string :: 'liquids/water-texture2.png'",
 	texture_speed: "decimal :: 0.002",
 
 	add_water_effect: "add_water(_x_bound, _y_bound, _x2_bound, _y2_bound)",
@@ -71,6 +71,45 @@ on_load: "[
 			shader_info: 'water_distort_new'
 		}])
 	),
+	spawn('water_controller.underlay', mid_x, mid_y, {
+		_x_bound: _x_bound,
+		_x2_bound: _x2_bound,
+		_y_bound: _y_bound,
+		_y2_bound: _y2_bound,
+	}),
 
 ]",
+
+
+
+object_type: [
+	{
+		id: "underlay",
+		zorder: "@include data/zorder.cfg:background_parallax_walls_further",
+		properties: {
+		#-------------------------- vars --------------------------#
+			_x_bound: { type: "int", default: 0, persistent: false },
+			_x2_bound: { type: "int", default: 0, persistent: false },
+			_y_bound: { type: "int", default: 0, persistent: false },
+			_y2_bound: { type: "int", default: 0, persistent: false },
+
+			_offset: { type: "decimal", default: 0, persistent: false },
+		},
+		on_create: "[fire_event('calculate_segments')]",
+		on_calculate_segments: "[set(x,_x_bound),set(y,_y_bound),set(draw_area, [0, _offset, abs(_x2_bound-_x_bound)/2, abs(_y2_bound-_y_bound)/2])]",
+		on_process: "[add(_offset,0.25),fire_event('calculate_segments')]",
+
+		#we don't want to compile the image since we rely on it tiling.
+		no_compile_image: "liquids/water-texture.png",
+		animation: {
+			image: "liquids/water-texture.png",
+			id: "normal",
+			x: 0,
+			w: 256,
+			y: 0,
+			h: 256,
+		},
+	},
+],
+
 }
