Fixed a typo in the acid controller, and added a top to the water controller that we'll be using in many of the forest/cave/dungeon levels.

--- a/data/objects/effects/liquids/acid_controller.cfg
+++ b/data/objects/effects/liquids/acid_controller.cfg
@@ -173,7 +173,7 @@ object_type: [
 		on_process: "[add(_offset,1.5),fire_event('calculate_segments')]",
 
 		#we don't want to compile the image since we rely on it tiling.
-		no_compile_image: "liquids/toxic-acid-bg.png",
+		no_compile_image: "liquids/toxic-acid-top.png",
 		animation: {
 			image: "liquids/toxic-acid-top.png",
 			id: "normal",
