--- a/data/objects/effects/liquids/water_controller.cfg
+++ b/data/objects/effects/liquids/water_controller.cfg
@@ -77,7 +77,12 @@ on_load: "[
 		_y_bound: _y_bound,
 		_y2_bound: _y2_bound,
 	}),
-
+	spawn('water_controller.top', mid_x, mid_y, {
+		_x_bound: _x_bound,
+		_x2_bound: _x2_bound,
+		_y_bound: _y_bound,
+		_y2_bound: _y2_bound,
+	}),
 ]",
 
 
@@ -108,6 +113,33 @@ object_type: [
 			w: 256,
 			y: 0,
 			h: 256,
+		},
+	},
+	{
+		id: "top",
+		zorder: "@include data/zorder.cfg:exterior_near_background",
+		properties: {
+		#-------------------------- vars --------------------------#
+			_x_bound: { type: "int", default: 0, persistent: false },
+			_x2_bound: { type: "int", default: 0, persistent: false },
+			_y_bound: { type: "int", default: 0, persistent: false },
+			_y2_bound: { type: "int", default: 0, persistent: false },
+
+			_offset: { type: "decimal", default: 0, persistent: false },
+		},
+		on_create: "[fire_event('calculate_segments')]",
+		on_calculate_segments: "[set(x,_x_bound),set(y,_y_bound - 20),set(draw_area, [5.0*sin(_offset), 0, abs(_x2_bound-_x_bound)/2, img_h/2])]",
+		on_process: "[add(_offset,1.5),fire_event('calculate_segments')]",
+
+		#we don't want to compile the image since we rely on it tiling.
+		no_compile_image: "liquids/water-top.png",
+		animation: {
+			image: "liquids/water-top.png",
+			id: "normal",
+			x: 0,
+			w: 128,
+			y: 0,
+			h: 16,
 		},
 	},
 ],
