Added an ocean-designated version of the water controller, which doesn't spawn a 'top'.

--- a/data/shaders.cfg
+++ b/data/shaders.cfg
@@ -350,7 +350,7 @@
 					set(uniform_commands.u_camera_pos, level.camera_position),
 					set(textures, [water_tex]),
 				] where water_tex = ctrl.get_texture
-				  where ctrl = find_or_die(level.chars, value is obj water_controller or value is obj whitewater_controller or value is obj water_controller_rising),
+				  where ctrl = find_or_die(level.chars, value is obj water_controller or value is obj whitewater_controller or value is obj water_controller_rising or value is obj water_controller_ocean),
 				
 				set(uniform_commands.u_water_area, [0,0,0,0])
 			),
@@ -358,7 +358,11 @@
 			[ 
 				[water._x_bound - pos[0], water._y_bound - pos[1], water._x2_bound - pos[0], water._y2_bound - pos[1]]
 				| water <- level.chars,
-				  water is obj water_controller or water is obj whitewater_controller or value is obj water_controller_rising,
+				  water is obj water_controller or
+				  water is obj whitewater_controller or
+				  water is obj water_controller_rising or
+				  water is obj water_controller_ocean,
+				  
 				  rects_intersect([water._x_bound, water._y_bound, water._x2_bound, water._y2_bound], camera_rect)
 			] where camera_rect = [pos[0], pos[1], pos[0]+pos[2], pos[1]+pos[3]]
 			  where pos = level.camera_position
